# template-repo-sync

./: .borg.template.toml  .borg.toml  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  child.borg.toml  parent.borg.toml  pyproject.toml
.github/workflows/: borg.yml
src/: borg
src/borg/: borg.py
